@@ -21,6 +21,8 @@ cupt (1.3.0) UNRELEASED; urgency=low
           the average RAM footprint for a solution.
         - Don't try to remove the unsynchronizeable package if the stick is
           set.
+        - Adjusted calculating action weights so installing an extra package
+          gains almost nothing.
       - Worker:
         - Don't use File::Path module. Thanks to Bernd Zeimetz.
           (Closes: #553629)
